// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Topbar -  logo prevents default when clicked 1`] = `
<Topbar>
  <header
    className="topbar"
  >
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props logout it prevents default when clicked 1`] = `
<Topbar
  logout={true}
>
  <header
    className="topbar"
  >
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
    <TopbarLogout>
      <a
        className="topbar-link-right"
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          exit_to_app
        </i>
        

        <span>
          Log out
        </span>
        

      </a>
      

    </TopbarLogout>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props logout renders logout link and adds topbar-link-right to the logout 1`] = `
<Topbar
  logout={true}
>
  <header
    className="topbar"
  >
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
    <TopbarLogout>
      <a
        className="topbar-link-right"
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          exit_to_app
        </i>
        

        <span>
          Log out
        </span>
        

      </a>
      

    </TopbarLogout>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props topbarContent menu links prevents default when clicked 1`] = `
<Topbar
  topbarContent={
    Object {
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn>
      <button
        className="topbar-btn"
        type="button"
      >
        
		
        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          menu
        </i>
        
		
      </button>
      <button
        className="topbar-close"
        type="button"
      >
        

        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          close
        </i>
        

        
		
      </button>
    </TopbarBtn>
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
    <TopbarMenu
      logout={false}
      menu={
        Object {
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props topbarContent renders a sidebar in topbar-link-container when sidebar prop is true 1`] = `
<Topbar
  sidebar={true}
  topbarContent={
    Object {
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn>
      <button
        className="topbar-btn"
        type="button"
      >
        
		
        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          menu
        </i>
        
		
      </button>
      <button
        className="topbar-close"
        type="button"
      >
        

        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          close
        </i>
        

        
		
      </button>
    </TopbarBtn>
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
    <TopbarMenu
      logout={false}
      menu={
        Object {
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
      sidebar={true}
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          <Sidebar
            id="topbar-sidebar"
            sidebarNavList={
              Array [
                Object {
                  "lastParent": true,
                  "subList": Array [
                    Object {
                      "title": "Introduction 1",
                    },
                    Object {
                      "title": "Introduction 2",
                    },
                    Object {
                      "title": "Introduction 3",
                    },
                  ],
                  "title": "Introduction",
                },
                Object {
                  "lastParent": true,
                  "subList": Array [
                    Object {
                      "title": "Summary chapter 1",
                    },
                    Object {
                      "title": "Summary chapter 2",
                    },
                    Object {
                      "title": "Summary chapter 3",
                    },
                  ],
                  "title": "Summary",
                },
                Object {
                  "lastParent": false,
                  "subList": Array [
                    Object {
                      "title": "Introduction",
                    },
                    Object {
                      "lastParent": true,
                      "subList": Array [
                        Object {
                          "title": "Operations",
                        },
                        Object {
                          "title": "Lorem ipsum",
                        },
                        Object {
                          "title": "Dolor sit amet consectetur",
                        },
                        Object {
                          "title": "Adipiscing elit",
                        },
                      ],
                      "title": "Operations",
                    },
                    Object {
                      "lastParent": true,
                      "subList": Array [
                        Object {
                          "title": "Event 1",
                        },
                        Object {
                          "title": "Event 2",
                        },
                        Object {
                          "title": "Event 3",
                        },
                      ],
                      "title": "Events",
                    },
                    Object {
                      "title": "Conclusion",
                    },
                  ],
                  "title": "Other features",
                },
              ]
            }
          >
            <div
              className="sidebar"
              id="topbar-sidebar"
            >
              <nav
                className="sidebar-nav"
              >
                <ul
                  className="main-nav-ul"
                >
                  <li
                    className="nav-group"
                    key="0"
                  >
                    <div
                      className="nav-group-heading"
                    >
                      <i
                        aria-hidden="true"
                        className="material-icons"
                      >
                        arrow_right
                      </i>
                      <span>
                        Introduction
                      </span>
                    </div>
                    <ul
                      className="nav-ul"
                    >
                      <li
                        className="nav-leaf"
                        key="0"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Introduction 1
                        </a>
                      </li>
                      <li
                        className="nav-leaf"
                        key="1"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Introduction 2
                        </a>
                      </li>
                      <li
                        className="nav-leaf"
                        key="2"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Introduction 3
                        </a>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="nav-group"
                    key="1"
                  >
                    <div
                      className="nav-group-heading"
                    >
                      <i
                        aria-hidden="true"
                        className="material-icons"
                      >
                        arrow_right
                      </i>
                      <span>
                        Summary
                      </span>
                    </div>
                    <ul
                      className="nav-ul"
                    >
                      <li
                        className="nav-leaf"
                        key="0"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Summary chapter 1
                        </a>
                      </li>
                      <li
                        className="nav-leaf"
                        key="1"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Summary chapter 2
                        </a>
                      </li>
                      <li
                        className="nav-leaf"
                        key="2"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Summary chapter 3
                        </a>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="nav-group"
                    key="2"
                  >
                    <div
                      className="nav-group-heading"
                    >
                      <i
                        aria-hidden="true"
                        className="material-icons"
                      >
                        arrow_right
                      </i>
                      <span>
                        Other features
                      </span>
                    </div>
                    <ul
                      className="nav-ul"
                    >
                      <li
                        className="nav-leaf nav-subgroup-leaf"
                        key="0"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Introduction
                        </a>
                      </li>
                      <li
                        className="nav-subgroup"
                        key="1"
                      >
                        <div
                          className="nav-subgroup-heading"
                        >
                          <i
                            aria-hidden="true"
                            className="material-icons"
                          >
                            arrow_right
                          </i>
                          <span>
                            Operations
                          </span>
                        </div>
                        <ul
                          className="nav-ul"
                        >
                          <li
                            className="nav-leaf"
                            key="0"
                          >
                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Operations
                            </a>
                          </li>
                          <li
                            className="nav-leaf"
                            key="1"
                          >
                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Lorem ipsum
                            </a>
                          </li>
                          <li
                            className="nav-leaf"
                            key="2"
                          >
                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Dolor sit amet consectetur
                            </a>
                          </li>
                          <li
                            className="nav-leaf"
                            key="3"
                          >
                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Adipiscing elit
                            </a>
                          </li>
                        </ul>
                      </li>
                      <li
                        className="nav-subgroup"
                        key="2"
                      >
                        <div
                          className="nav-subgroup-heading"
                        >
                          <i
                            aria-hidden="true"
                            className="material-icons"
                          >
                            arrow_right
                          </i>
                          <span>
                            Events
                          </span>
                        </div>
                        <ul
                          className="nav-ul"
                        >
                          <li
                            className="nav-leaf"
                            key="0"
                          >
                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Event 1
                            </a>
                          </li>
                          <li
                            className="nav-leaf"
                            key="1"
                          >
                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Event 2
                            </a>
                          </li>
                          <li
                            className="nav-leaf"
                            key="2"
                          >
                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Event 3
                            </a>
                          </li>
                        </ul>
                      </li>
                      <li
                        className="nav-leaf nav-subgroup-leaf"
                        key="3"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                        >
                          Conclusion
                        </a>
                      </li>
                    </ul>
                  </li>
                </ul>
              </nav>
            </div>
          </Sidebar>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props topbarContent renders a topbar menu without menu icons 1`] = `
<Topbar
  topbarContent={
    Object {
      "items": Array [
        Object {
          "name": "Home",
        },
        Object {
          "name": "Purchase history",
        },
        Object {
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn>
      <button
        className="topbar-btn"
        type="button"
      >
        
		
        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          menu
        </i>
        
		
      </button>
      <button
        className="topbar-close"
        type="button"
      >
        

        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          close
        </i>
        

        
		
      </button>
    </TopbarBtn>
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
    <TopbarMenu
      logout={false}
      menu={
        Object {
          "items": Array [
            Object {
              "name": "Home",
            },
            Object {
              "name": "Purchase history",
            },
            Object {
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            

            <span>
              Settings
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props topbarContent renders a topbar-menu-button when content is provided 1`] = `
<Topbar
  topbarContent={
    Object {
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn>
      <button
        className="topbar-btn"
        type="button"
      >
        
		
        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          menu
        </i>
        
		
      </button>
      <button
        className="topbar-close"
        type="button"
      >
        

        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          close
        </i>
        

        
		
      </button>
    </TopbarBtn>
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
    <TopbarMenu
      logout={false}
      menu={
        Object {
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props topbarContent renders topbar-link-container and a logout link 1`] = `
<Topbar
  logout={true}
  topbarContent={
    Object {
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn>
      <button
        className="topbar-btn"
        type="button"
      >
        
		
        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          menu
        </i>
        
		
      </button>
      <button
        className="topbar-close"
        type="button"
      >
        

        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          close
        </i>
        

        
		
      </button>
    </TopbarBtn>
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
    <TopbarMenu
      logout={true}
      menu={
        Object {
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

          <TopbarLogout>
            <a
              className="topbar-link-right"
              href="#"
              onClick={[Function]}
            >
              

              <i
                aria-hidden="true"
                className="material-icons"
              >
                exit_to_app
              </i>
              

              <span>
                Log out
              </span>
              

            </a>
            

          </TopbarLogout>
        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props topbarContent renders topbar-link-container and populates it with given information without a logout link 1`] = `
<Topbar
  topbarContent={
    Object {
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn>
      <button
        className="topbar-btn"
        type="button"
      >
        
		
        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          menu
        </i>
        
		
      </button>
      <button
        className="topbar-close"
        type="button"
      >
        

        <i
          aria-hidden="true"
          className="material-icons topbar-btn-icon"
        >
          close
        </i>
        

        
		
      </button>
    </TopbarBtn>
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
    <TopbarMenu
      logout={false}
      menu={
        Object {
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  props wide renders a topbar with the given breakpoint 1`] = `
<Topbar
  wide="lg"
>
  <header
    className="topbar topbar-lg-wide"
  >
    

    <TopbarLogo>
      <a
        className="topbar-logo"
        href="/"
        onClick={[Function]}
      >
        

        <img
          alt="TESTBRAND-logo"
          src="/TEST/img/TESTBRAND-logo.svg"
        />
        

      </a>
      

    </TopbarLogo>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  renders a topbar with only a clickable logo 1`] = `
<header
  className="topbar"
>
  

  <TopbarLogo />
</header>
`;
